# FastFrames

./: .asetup.save  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  FastFramesConfig.cmake.in  README.md  mkdocs.yml  setup.sh  tWZ_test_config.yml  tutorial_config.yml
FastFrames/: Binning.h  ConfigSetting.h  CustomOptions.h  CutflowContainer.h  DefineHelpers.h  FastFramesExecutor.h  HistoContainer.h  Logger.h  MainFrame.h  Metadata.h  MetadataManager.h  Ntuple.h  ONNXWrapper.h  ObjectCopier.h  Region.h  Sample.h  SimpleONNXInference.h  StringOperations.h  Systematic.h  SystematicReplacer.h  Truth.h  UniqueSample.h  UniqueSampleID.h  Utils.h  Variable.h  VariableMacros.h  XSectionManager.h
Root/: Binning.cc  ConfigSetting.cc  CutflowContainer.cc  DefineHelpers.cc  FastFramesExecutor.cc  HistoContainer.cc  LinkDef.h  MainFrame.cc  Metadata.cc  MetadataManager.cc  Ntuple.cc  ONNXWrapper.cc  ObjectCopier.cc  Region.cc  Sample.cc  ScheduleSimpleONNXInference.cc  StringOperations.cc  Systematic.cc  SystematicReplacer.cc  Truth.cc  UniqueSample.cc  UniqueSampleID.cc  Utils.cc  Variable.cc  XSectionManager.cc
TutorialClass/: .asetup.save  CMakeLists.txt
TutorialClass/Root/: LinkDef.h  TutorialClass.cc
TutorialClass/TutorialClass/: .TutorialClass.h.swp  TutorialClass.h
data/: XSection-MC16-13TeV.data  XSection-MC21-13p6TeV.data
docs/: Doxyfile.in  config.md  helpers.md  index.md  trex_config.md  tutorial.md
docs/changelog/: index.md
docs/webpage/: config.md
examples/: README.md
examples/CustomVariables/: CMakeLists.txt  README.md
examples/CustomVariables/CustomFrame/: CustomFrame.h
examples/CustomVariables/Root/: CustomFrame.cc
input/: filelist_tWZ.txt  sum_of_weights_tWZ.txt
install/cmake/modules/: FindCMSCombine.cmake  FindworkspaceCombiner.cmake  FindxmlAnaWSBuilder.cmake
install/include/FastFrames/: ConfigSetting.h  Utils.h  Variable.h
install/lib/: libFastFrames_rdict.pcm
install/lib/cmake/FastFrames/: FastFramesConfig.cmake  FastFramesTargets.cmake
output/: ttbar_FS.root
python/: FastFrame.py  FastFrames.py  condor_submit.py  merge_empty_grid_files.py  merge_jobs.py  produce_filelist.py  produce_metadata_files.py  produce_sum_weights_file.py  produce_trexfitter_config.py
python/ConfigReaderModules/: AutomaticRangeGenerator.py  BlockOptionsGetter.py  BlockReaderBinning.py  BlockReaderCommon.py  BlockReaderCutflow.py  BlockReaderGeneral.py  BlockReaderNtuple.py  BlockReaderRegion.py  BlockReaderSample.py  BlockReaderSampleTruth.py  BlockReaderSystematic.py  BlockReaderSystematics.py  BlockReaderUniqueSampleID.py  BlockReaderVariable.py  CommandLineOptions.py  ConfigReader.py
python/FastFrameWrappers/: FastFrame.py
python/TRExFitterConfigPreparation/: TrexSettingsGetter.py
python_wrapper/headers/: ConfigSettingWrapper.h  DuplicateEventsChecker.h  FastFramesExecutorWrapper.h  MainFrameWrapper.h  NtupleWrapper.h  RegionWrapper.h  SampleWrapper.h  SumWeightsGetter.h  SystematicWrapper.h  TruthWrapper.h  UniqueSampleIDWrapper.h  VariableWrapper.h
python_wrapper/python/: logger.py
python_wrapper/utils/: ConfigReader.cxx  ConfigReaderCpp.cxx  Logger.cxx
test/configs/: config.yml  config_TRExFitter_test.yml  config_custom_class.yml  config_nested_anchors_test.yml  config_testing.yml  trex_settings.yml
test/input/: data17.PHYS.p4910.root  data18.PHYS.p4910.root  mc20e.410470.PhPy8EG_A14_ttbar_hdamp258p75_nonallhad.PHYS.e6337_s3681_r13145_p5658.root  mc20e.700341.Sh_2211_Wmunu_maxHTpTV2_BFilter.PHYS.e8351_s3681_r13167_r13146_p5855.root
test/python/: compare_trex_configs.py  compare_two_files.py  compare_two_root_files.py
test/reference_files/config_reading/: config_TRExFitter_test.yml  config_testing.yml  reference_log.txt  reference_log_samples_ttbar_Wjets.txt  reference_nested_anchors.txt
test/reference_files/configs_root_files_comparison/: config.yml
test/reference_files/configs_root_files_comparison/output_histograms/: Data.root  Wjets.root  ttbar_FS.root
test/reference_files/configs_root_files_comparison/output_ntuples/: Data_0_2017_data.root  Wjets_700341_mc20a_fullsim.root
test/reference_files/trex_configs/: trex_settings.yml
test/reference_files/trex_configs/output/: config_TRExFitter_test_inclusive.config  config_TRExFitter_test_inclusive_with_settings_file.config  config_TRExFitter_test_unfolding.config  config_testing_inclusive.config  config_testing_unfolding.config
util/: fast-frames.cc
